kustomize/base/resources/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pod-backend
  template:
    metadata:
      labels:
        name: pod-backend
      name: backend
    spec:
      serviceAccountName: kafkaml
      automountServiceAccountToken: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: kafka-ml-backend
          name: backend
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
