kustomize/base/resources/kafka-control-logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: kafka-control-logger
  name: kafka-control-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-control-logger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafka-control-logger
      name: kafka-control-logger
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: kafka-ml-kafka_control_logger
          name: kafka-control-logger
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
