kustomize/base/resources/pth-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pthexecutor
  name: pthexecutor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pod-pthexecutor
  template:
    metadata:
      labels:
        name: pod-pthexecutor
      name: pthexecutor
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pthexecutor
          image: kafka-ml-pthexecutor
          ports:
            - containerPort: 8002
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
