kustomize/base/resources/tf-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: tfexecutor
  name: tfexecutor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pod-tfexecutor
  template:
    metadata:
      labels:
        name: pod-tfexecutor
      name: tfexecutor
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tfexecutor
          image: kafka-ml-tfexecutor
          ports:
            - containerPort: 8001
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
